--- a/IL2DCE/Campaigns/AircraftInfo.ini
+++ b/IL2DCE/Campaigns/AircraftInfo.ini
@@ -10,6 +10,7 @@
 # ATTACK_ARTILLERY
 # ATTACK_RADAR
 # ATTACK_SHIP
+# ATTACK_AIRCRAFT
 #
 # INTERCEPT
 # NIGHT_INTERCEPT
@@ -46,10 +47,12 @@
   Aircraft.SpitfireMkI_Heartbreaker
   Aircraft.HurricaneMkI_dH5-20
   Aircraft.HurricaneMkI
+  Aircraft.HurricaneMkI_100oct
   Aircraft.Ju-87B-2
   Aircraft.Ju-88A-1
   Aircraft.SpitfireMkI
   Aircraft.SpitfireMkIa
+  Aircraft.SpitfireMkIa_oct
   Aircraft.SpitfireMkIIa
   Aircraft.SunderlandMkI
   Aircraft.DH82A
@@ -66,7 +69,7 @@
   Ceiling #
 [Aircraft.BeaufighterMkIF]
   Player 0
-  NIGHT_INTERCEPT /Default 0 10000
+  NIGHT_INTERCEPT /Default 0 5000
   NIGHT_INTRUDER /Default 300 3000
 [Aircraft.BeaufighterMkIF_Default]
   Weapons 1 1
@@ -83,9 +86,9 @@
   Ceiling #
 [Aircraft.Bf-109E-1]
   Player 1
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
 [Aircraft.Bf-109E-1_Default]
   Weapons 1 1
   Fuel 100
@@ -93,9 +96,9 @@
   Ceiling #
 [Aircraft.Bf-109E-3]
   Player 1
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
 [Aircraft.Bf-109E-3_Default]
   Weapons 1 1
   Fuel 100
@@ -107,6 +110,7 @@
   ATTACK_VEHICLE /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
   ATTACK_SHIP /1xSC250_Low 500 1000 /1xSC250_High 1000 2000
   ATTACK_RADAR /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+  ATTACK_AIRCRAFT /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000  
 [Aircraft.Bf-109E-3B_4xSC50_Low]
   Weapons 1 1 2
   Detonator Bomb.SC-250_Type1_J 2 -1 0
@@ -133,9 +137,9 @@
   Ceiling #
 [Aircraft.Bf-109E-4]
   Player 1
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
 [Aircraft.Bf-109E-4_Default]
   Weapons 1 1
   Fuel 100
@@ -147,6 +151,7 @@
   ATTACK_VEHICLE /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
   ATTACK_SHIP /1xSC250_Low 500 1000 /1xSC250_High 1000 2000
   ATTACK_RADAR /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+  ATTACK_AIRCRAFT /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000  
 [Aircraft.Bf-109E-4B_4xSC50_Low]
   Weapons 1 1 2
   Detonator Bomb.SC-250_Type1_J 2 -1 0
@@ -173,10 +178,10 @@
   Ceiling #
 [Aircraft.Bf-110C-4]
   Player 1
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
-  NIGHT_INTERCEPT /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
+  NIGHT_INTERCEPT /Default 0 5000
 [Aircraft.Bf-110C-4_Default]
   Weapons 1 1 1
   Fuel 100
@@ -188,6 +193,7 @@
   ATTACK_VEHICLE /2xSD250 500 2000 /2xSD500 500 2000
   ATTACK_SHIP /2xSC250 500 2000 /2xSC500 500 2000
   ATTACK_RADAR /2xSC250 500 2000 /2xSC500 500 2000
+  ATTACK_AIRCRAFT /2xSC250 500 2000 /2xSC500 500 2000
 [Aircraft.Bf-110C-7_2xSC250]
   Weapons 1 1 1 2
   Fuel 100
@@ -218,6 +224,7 @@
   ATTACK_VEHICLE /4x250lb 500 2000 /4x250lb 500 2000
   ATTACK_SHIP /4x250lb 500 2000 /4x250lb 500 2000
   ATTACK_RADAR /4x250lb 500 2000 /4x250lb 500 2000
+  ATTACK_AIRCRAFT /4x250lb 500 2000 /4x250lb 500 2000
 [Aircraft.BlenheimMkI_Default]
   Weapons 1 1 0 0 0
   Fuel 100
@@ -243,6 +250,7 @@
   ATTACK_VEHICLE /4x250lb 500 2000 /4x250lb 500 2000
   ATTACK_SHIP /4x250lb 500 2000 /4x250lb 500 2000
   ATTACK_RADAR /4x250lb 500 2000 /4x250lb 500 2000
+  ATTACK_AIRCRAFT /4x250lb 500 2000 /4x250lb 500 2000
 [Aircraft.BlenheimMkIV_Default]
   Weapons 1 1 0 0 0
   Fuel 100
@@ -268,6 +276,7 @@
   ATTACK_VEHICLE /12x50T 500 2000 /12x100T 500 2000 /2x500MT 500 2000
   ATTACK_SHIP /2x500MT 500 2000 /2x800T 500 2000
   ATTACK_RADAR /2x500MT 500 2000 /2x800T 500 2000
+  ATTACK_AIRCRAFT /2x500MT 500 2000 /2x800T 500 2000
 [Aircraft.BR-20M_Default]
   Weapons 1 1 1 0
   Fuel 100
@@ -305,9 +314,9 @@
   Ceiling #
 [Aircraft.CR42]
   Player 0
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
 [Aircraft.CR42_Default]
   Weapons 1
   Fuel 100
@@ -315,9 +324,9 @@
   Ceiling #
 [Aircraft.DefiantMkI]
   Player 0
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
-  NIGHT_INTERCEPT /Default 0 10000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
+  NIGHT_INTERCEPT /Default 0 5000
 [Aircraft.DefiantMkI_Default]
   Weapons 1
   Fuel 100
@@ -333,6 +342,7 @@
   ATTACK_VEHICLE /2xSC250 500 2000 /20xSC50 500 2000
   ATTACK_SHIP /2xSC250 500 2000
   ATTACK_RADAR /2xSC250 500 2000 /20xSC50 500 2000
+  ATTACK_AIRCRAFT /2xSC250 500 2000 /20xSC50 500 2000
 [Aircraft.Do-17Z-1_Default]
   Weapons 1 1 1 1 0 0 
   Fuel 100
@@ -358,6 +368,7 @@
   ATTACK_VEHICLE /2xSC250 500 2000 /20xSC50 500 2000
   ATTACK_SHIP /2xSC250 500 2000
   ATTACK_RADAR /2xSC250 500 2000 /20xSC50 500 2000
+  ATTACK_AIRCRAFT /2xSC250 500 2000 /20xSC50 500 2000
 [Aircraft.Do-17Z-2_Default]
   Weapons 1 1 1 1 1 1 0 0 
   Fuel 100
@@ -410,9 +421,9 @@
   Ceiling #
 [Aircraft.G50]
   Player 1
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
 [Aircraft.G50_Default]
   Weapons 1
   Fuel 100
@@ -420,9 +431,9 @@
   Ceiling #
 [Aircraft.GladiatorMkII]
   Player 0
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
 [Aircraft.GladiatorMkII_Default]
   Weapons 1
   Fuel 100
@@ -438,6 +449,7 @@
   ATTACK_VEHICLE /8xSD250 500 2000 /32xSC50 500 2000
   ATTACK_SHIP /8xSC250 500 2000
   ATTACK_RADAR /8xSC250 500 2000 /32xSC50 500 2000
+  ATTACK_AIRCRAFT /8xSC250 500 2000 /32xSC50 500 2000
 [Aircraft.He-111H-2_Default]
   Weapons 1 1 1 1 1 1 0
   Fuel 100
@@ -468,6 +480,7 @@
   ATTACK_VEHICLE /8xSD250 500 2000 /32xSC50 500 2000
   ATTACK_SHIP /8xSC250 500 2000
   ATTACK_RADAR /8xSC250 500 2000 /32xSC50 500 2000
+  ATTACK_AIRCRAFT /8xSC250 500 2000 /32xSC50 500 2000
 [Aircraft.He-111P-2_Default]
   Weapons 1 1 1 1 1 1 0
   Fuel 100
@@ -506,9 +519,9 @@
   Ceiling #
 [Aircraft.SpitfireMkI_Heartbreaker]
   Player 1
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
 [Aircraft.SpitfireMkI_Heartbreaker_Default]
   Weapons 1
   Fuel 100
@@ -516,8 +529,8 @@
   Ceiling #
 [Aircraft.HurricaneMkI_dH5-20]
   Player 1
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
 [Aircraft.HurricaneMkI_dH5-20_Default]
   Weapons 1
   Fuel 100
@@ -525,20 +538,31 @@
   Ceiling #
 [Aircraft.HurricaneMkI]
   Player 1
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
 [Aircraft.HurricaneMkI_Default]
   Weapons 1
   Fuel 100
   Range #
   Ceiling #
+[Aircraft.HurricaneMkI_100oct]
+  Player 1
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
+[Aircraft.HurricaneMkI_100oct_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #  
 [Aircraft.Ju-87B-2]
   Player 1
   ATTACK_ARMOR /1xSC250+4xSC50 1000 5000 /1xSC500 1000 5000
   ATTACK_VEHICLE /1xSD250+4xSC50 1000 5000 /1xSD500 1000 5000
   ATTACK_SHIP /1xSC250+4xSC50 1000 5000 /1xSC500 1000 5000
   ATTACK_RADAR /1xSC250+4xSC50 1000 5000 /1xSC500 1000 5000
+  ATTACK_AIRCRAFT /1xSC250+4xSC50 1000 5000 /1xSC500 1000 5000
 [Aircraft.Ju-87B-2_Default]
   Weapons 1 1 0 0
   Fuel 100
@@ -574,6 +598,7 @@
   ATTACK_VEHICLE /4xSD250 500 2000
   ATTACK_SHIP /4xSC250 500 2000
   ATTACK_RADAR /4xSC250 500 2000
+  ATTACK_AIRCRAFT /4xSC250 500 2000
 [Aircraft.Ju-88A-1_Default]
   Weapons 1 1 1 0 0 0
   Fuel 100
@@ -591,9 +616,9 @@
   Ceiling #
 [Aircraft.SpitfireMkI]
   Player 1
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
 [Aircraft.SpitfireMkI_Default]
   Weapons 1
   Fuel 100
@@ -601,19 +626,29 @@
   Ceiling #
 [Aircraft.SpitfireMkIa]
   Player 1
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
 [Aircraft.SpitfireMkIa_Default]
   Weapons 1
   Fuel 100
   Range #
   Ceiling #
+[Aircraft.SpitfireMkIa_oct]
+  Player 1
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
+[Aircraft.SpitfireMkIa_oct_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #  
 [Aircraft.SpitfireMkIIa]
   Player 1
-  ESCORT /Default 0 10000
-  INTERCEPT /Default 0 10000
-  COVER /Default 0 10000
+  ESCORT /Default 0 5000
+  INTERCEPT /Default 0 5000
+  COVER /Default 0 5000
 [Aircraft.SpitfireMkIIa_Default]
   Weapons 1
   Fuel 100
@@ -634,6 +669,7 @@
   Weapons 1
   Fuel 100
   Range #
+  Ceiling #
 [Aircraft.WalrusMkI]
   Player 0
   MARITIME_RECON /Default 1000 5000
@@ -663,6 +699,7 @@
   ATTACK_VEHICLE /18x250lb 500 2000 /9x250lb 500 2000
   ATTACK_SHIP /18x250lb 500 2000 /9x250lb 500 2000
   ATTACK_RADAR /18x250lb 500 2000 /9x250lb 500 2000
+  ATTACK_AIRCRAFT /18x250lb 500 2000 /9x250lb 500 2000
 [Aircraft.WellingtonMkIc_Default]
   Weapons 1 1 0
   Fuel 100
